tests/errors/control_flow_abuses.sad
x = 1
menu x {
    choice 1 { show("A") }
    choice 1 { show("B") }
}
